# vitask

./: .gitignore  Caddyfile  README.md  SPACES_UI.md  app.db  docker-compose.yaml  sonar-project.properties  tailwind.config.js  users.db
.scannerwork/: report-task.txt
client/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
client/src/: App.css  App.jsx  App.tsx  index.css  main.jsx
client/src-tauri/: tauri.conf.json
client/src/api/: auth.ts  categories.ts  (+4 more)
client/tmp/: 99-4810-prompt  99-5944  99-5944-prompt  99-7297  99-7297-prompt  99-9177-prompt
server/: .gitignore  Dockerfile  Dockerfile.dev  main.py  migrate.py  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 02aa36e697f3_linked_tags_to_tasks.py  2bac02403609_add_token_hash_column.py  46158b1523cb_add_token_hash_column_to_res.py  69ec58c395a1_add_token_hash_column_to_res.py  83c185a55d72_linked_tags_to_tasks.py  8ff172448bf4_add_refresh_sessions_table.py  a40862d53e1e_add_categories.py  bdd1ef0cf5dc_added_tags.py  d96d75efa3b9_add_refresh_sessions_table.py  f38e4eb91cb4_added_tags.py
server/app/: auth.py  database.py  errors.py  main.py  models.py  routers.py  schemas.py  security.py  services.py  settings.py
server/app/routers/: __init__.py  categories.py  tasks.py  users.py
server/app/services/: categories.py  tasks.py  users.py
server/tests/: __init__.py  auth.py  conftest.py  tasks.py  test_auth.py  test_categories.py  test_main.py  test_services.py  test_tasks.py
(+33 files in other folders)
